<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/public_color_F9F9F9"
    android:fadingEdge="none"
    android:orientation="vertical"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--            <include layout="@layout/public_include_title" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_height_269dp"
            android:background="@mipmap/ic_bg_mycenter_top"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/public_pad_top_46dp">

            <me.jessyan.armscomponent.commonres.other.CircleImageView
                android:id="@+id/img_user_head"
                android:layout_width="@dimen/public_height_72dp"
                android:layout_height="@dimen/public_height_72dp"
                android:layout_margin="@dimen/public_mar_left_10dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_defaul_head_img" />

            <TextView
                android:id="@+id/tv_user_nice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/public_mar_top_11dp"
                android:gravity="center"
                android:text="未登录"
                android:textColor="@color/public_color_333333"
                android:textSize="@dimen/public_font_18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/public_pad_left_20dp"
                    android:paddingTop="@dimen/public_pad_bottom_10dp"
                    android:paddingRight="@dimen/public_pad_right_20dp"
                    android:paddingBottom="@dimen/public_pad_bottom_10dp">

                    <TextView
                        android:id="@+id/tv_follow_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="123"
                        android:textColor="@color/public_color_2A2A2A"
                        android:textSize="@dimen/public_font_15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_name_follow"
                        android:textColor="@color/public_color_666F80"
                        android:textSize="@dimen/public_font_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/public_pad_left_20dp"
                    android:paddingTop="@dimen/public_pad_bottom_10dp"
                    android:paddingRight="@dimen/public_pad_right_20dp"
                    android:paddingBottom="@dimen/public_pad_bottom_10dp">

                    <TextView
                        android:id="@+id/tv_fans_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="123"
                        android:textColor="@color/public_color_2A2A2A"
                        android:textSize="@dimen/public_font_15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_name_fans"
                        android:textColor="@color/public_color_666F80"
                        android:textSize="@dimen/public_font_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/public_pad_left_20dp"
                    android:paddingTop="@dimen/public_pad_bottom_10dp"
                    android:paddingRight="@dimen/public_pad_right_20dp"
                    android:paddingBottom="@dimen/public_pad_bottom_10dp">

                    <TextView
                        android:id="@+id/tv_goods_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="123"
                        android:textColor="@color/public_color_2A2A2A"
                        android:textSize="@dimen/public_font_15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_name_goods"
                        android:textColor="@color/public_color_666F80"
                        android:textSize="@dimen/public_font_12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/public_pad_left_20dp"
                    android:paddingTop="@dimen/public_pad_bottom_10dp"
                    android:paddingRight="@dimen/public_pad_right_20dp"
                    android:paddingBottom="@dimen/public_pad_bottom_10dp">

                    <TextView
                        android:id="@+id/tv_shops_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="123"
                        android:textColor="@color/public_color_2A2A2A"
                        android:textSize="@dimen/public_font_15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_name_shop"
                        android:textColor="@color/public_color_666F80"
                        android:textSize="@dimen/public_font_12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_my_wallet"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_my_wallet_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_my_wallet" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_my_shop"
            style="@style/My_Item_LinearLayout_Style"
            android:layout_marginTop="@dimen/public_mar_top_10dp">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_shop_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_my_shop" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />

        <LinearLayout
            android:id="@+id/ll_my_shop_info"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_shop_info_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_shop_info" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />

        <LinearLayout
            android:id="@+id/ll_my_company_authority"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_company_authority_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_company_authority" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />
        <LinearLayout
            android:id="@+id/ll_my_company_build"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_company_build_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_company_build" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />

        <LinearLayout
            android:id="@+id/ll_my_pay_bili"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_pay_bili_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_pay_bili" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />

        <LinearLayout
            android:id="@+id/ll_my_cangku"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_my_cangku_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_my_cangku" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />

        <LinearLayout
            android:id="@+id/ll_my_category"
            style="@style/My_Item_LinearLayout_Style">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_category_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_my_category" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

        <include layout="@layout/public_line_horizontal_color_gray" />

        <LinearLayout
            android:id="@+id/ll_my_setting"
            style="@style/My_Item_LinearLayout_Style"
            android:layout_marginTop="@dimen/public_mar_top_10dp"
            android:layout_marginBottom="@dimen/public_mar_bottom_34dp">

            <ImageView
                style="@style/My_Item_ImageView_Left_Style"
                android:src="@mipmap/ic_setting_gray" />

            <TextView
                style="@style/My_Item_TextView_Style"
                android:text="@string/public_name_setting" />

            <ImageView style="@style/My_Item_ImageView_Right_Style" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>